--- a/app/src/main/res/drawable/today_background.xml
+++ b/app/src/main/res/drawable/today_background.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-</selector>
+    <gradient
+        android:angle="360"
+        android:endColor="@color/colorEnd"
+        android:startColor="@color/colorStart"
+    />
+
+    <corners
+        android:radius="10dp"
+    />
+
+</shape>
