--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#537CDA</color>
+    <color name="colorPrimaryDark">#383D3B</color>
+    <color name="colorAccent">#383D3B</color>
+    <color name="colorPrimaryLight">#52DEE5</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBackground">#EEE5E9</color>
+    <color name="colorStart">#383D3B</color>
+    <color name="colorEnd">#537CDA</color>
+    <color name="colorDivider">#383D3B</color>
 </resources>
