--- a/app/src/main/res/layout/activity_medications.xml
+++ b/app/src/main/res/layout/activity_medications.xml
@@ -14,12 +14,24 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/header_background">
 
+        <ImageView
+            android:id="@+id/backArrow"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            app:tint="@color/colorWhite"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintTop_toTopOf="@id/headerText"
+            app:layout_constraintBottom_toBottomOf="@id/headerText"
+            />
+
         <TextView
             android:id="@+id/headerText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="50dp"
             android:layout_marginLeft="15dp"
             android:layout_marginBottom="15dp"
             android:text="@string/medications"
