--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/medicationsHeader"
+        android:id="@+id/calHeader"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/header_background">
 
@@ -30,42 +30,255 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/calendar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/calHeader">
+
+        <CalendarView
+            android:id="@+id/cal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+
+        android:id="@+id/dateInfo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/divider"
-        app:layout_constraintTop_toBottomOf="@id/medicationsHeader">
+        app:layout_constraintTop_toBottomOf="@id/calendar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/colorBackground">
+
+        <TextView
+            android:id="@+id/medDateText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Medication Dates"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+        </TextView>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+            android:id="@+id/dateInfo1"
             android:layout_height="wrap_content"
-            android:id="@+id/medInfoForm">
+            android:layout_width="match_parent"
+            android:background="@drawable/white_rect_back"
+            android:layout_marginTop="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
+            android:elevation="4dp"
+            app:layout_constraintTop_toBottomOf="@id/medDateText">
 
-            <CalendarView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+
+            <ImageView
+                android:id="@+id/dateIcon1"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/calendar_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="NotSibling">
+
+            </ImageView>
+
+            <TextView
+                android:id="@+id/medName1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Medication Name"
+                app:layout_constraintStart_toEndOf="@id/dateIcon1"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="10dp"
+                android:textSize="15dp">
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/startDateText1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Start Date"
+                app:layout_constraintStart_toEndOf="@id/dateIcon1"
+                app:layout_constraintTop_toBottomOf="@id/medName1"
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimary"
+                >
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/endDateText1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="End Date"
+                app:layout_constraintStart_toEndOf="@id/startDateText1"
+                app:layout_constraintTop_toBottomOf="@id/medName1"
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp">
+
+            </TextView>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </ScrollView>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/dateInfo2"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:background="@drawable/white_rect_back"
+            android:layout_marginTop="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
+            android:elevation="4dp"
+            app:layout_constraintTop_toBottomOf="@id/dateInfo1">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNav"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:backgroundTint="@color/colorWhite"
-        app:itemIconSize="30dp"
-        app:labelVisibilityMode="unlabeled"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/nav_menu"
-        />
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorWhite"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
-        />
+            <ImageView
+                android:id="@+id/dateIcon2"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/calendar_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="NotSibling">
+
+            </ImageView>
+
+            <TextView
+                android:id="@+id/medName2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Medication Name"
+                app:layout_constraintStart_toEndOf="@id/dateIcon2"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="10dp"
+                android:textSize="15dp">
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/startDateText2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Start Date"
+                app:layout_constraintStart_toEndOf="@id/dateIcon2"
+                app:layout_constraintTop_toBottomOf="@id/medName2"
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimary"
+                >
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/endDateText2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="End Date"
+                app:layout_constraintStart_toEndOf="@id/startDateText2"
+                app:layout_constraintTop_toBottomOf="@id/medName2"
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp">
+
+            </TextView>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/dateInfo3"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:background="@drawable/white_rect_back"
+            android:layout_marginTop="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
+            android:elevation="4dp"
+            app:layout_constraintTop_toBottomOf="@id/dateInfo2">
+
+
+            <ImageView
+                android:id="@+id/dateIcon3"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/calendar_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="NotSibling">
+
+            </ImageView>
+
+            <TextView
+                android:id="@+id/medName3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Medication Name"
+                app:layout_constraintStart_toEndOf="@id/dateIcon3"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="10dp"
+                android:textSize="15dp">
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/startDateText3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Start Date"
+                app:layout_constraintStart_toEndOf="@id/dateIcon3"
+                app:layout_constraintTop_toBottomOf="@id/medName3"
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimary"
+                >
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/endDateText3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="End Date"
+                app:layout_constraintStart_toEndOf="@id/startDateText3"
+                app:layout_constraintTop_toBottomOf="@id/medName3"
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp">
+
+            </TextView>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
